src/test/resources/annotator/unexpectedInverseTag.twig
{% if foo %}
{% else %}
{% endif %}

{% for var in foo %}
{% else %}
{% endfor %}

{% block foo %}
{% <error descr="Only 'if' and 'for' statements may have an inverse block">else</error> %}
{% endblock %}